--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-# Python
 __pycache__/
 *.pyc
-
-# Secrets
 .env
-
-# Local/persistent data (Railway volume will hold this)
 data/
 *.db
-
-# Optional: if you never want config pushed
-# config.json
+bot.lock
+config_with_token.json
